--- a/views/index.html
+++ b/views/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drawflowjs</title>
     <link href="css/output.css" rel="stylesheet">
 </head>
+
 <body>
-    <div class="p-4 md:p-8 bg-purple-500 text-white text-center">
-        Hello, Tailwind!
+    <!-- Contenedor de Mermaid -->
+    <div class="mermaid">
+        graph LR
+        A[Hard edge] -->|Link text| B(Round edge)
+        B --> C{Decision}
+        C -->|One| D[Result one]
+        C -->|Two| E[Result two]
+        A --> F(Prueba)
     </div>
+
+    <!-- Incluyendo Mermaid desde CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+
+    <!-- Inicializando Mermaid -->
+    <script>
+        mermaid.initialize({ startOnLoad: true });
+    </script>
 </body>
+
 </html>
